--- a/public/content/Dreamhacker.mdx
+++ b/public/content/Dreamhacker.mdx
@@ -79,3 +79,86 @@ do
 done
 unset PGPASSWORD
 ```
+
+
+- ・EC2インスタンスに指すため、Aレコードを追加します。今、HTTPでdomain nameを通じてEC2との接続を作成できるようになりいました。HTTPSをセットアップするため、証明書が提供されることが必要です。
+Nginxをセットアップステップで実装します。
+
+<div className="flex justify-center">
+    <img src={"/project/dreamhacker/domain.png"} width="80%" />
+</div>
+
+- ・Dockerfileを定義します。
+``` docker
+#２ステップビルド
+FROM node:20-alpine AS development
+ARG NODE_ENV=development
+ENV NODE_ENV=${NODE_ENV} #環境値
+
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN yarn install
+COPY . .
+RUN yarn run build
+
+FROM node:20-alpine as production
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN yarn install --only=prod
+COPY --from=development /usr/src/app/dist ./dist
+CMD ["node", "dist/index.js"]
+```
+
+- ・環境準備ができた後、GithubActionでCI/CDを設定します。
+まず、実行環境を定義します
+
+``` yml
+name: Deploy to Amazon ECS
+on:
+  push:
+    branches:
+      - main ビルドブランチを定義する
+env:
+  AWS_REGION: # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: # set this to your Amazon ECR repository name
+  CONTAINER_NAME: # set this to the name of the container in the
+```
+
+- ・次、ビルドとプッシュ過程
+まず、実行環境を定義します
+
+``` yml
+jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials #AWSをアクセス証明
+        uses: aws-actions/configure-aws-credentials@
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@
+
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: #ビルドして、ECRにプッシュする
+          docker build -t .dkr.ecr.ap-northeast-1.amazonaws.com/dreamhacker:latest .
+          docker push .dkr.ecr.ap-northeast-1.amazonaws.com/dreamhacker:latest
+          echo "image=$ECR_REGISTRY:latest" >> $GITHUB_OUTPUTname: Deploy to Amazon ECS
+```
