--- a/public/content/Dreamhacker.mdx
+++ b/public/content/Dreamhacker.mdx
@@ -1,7 +1,7 @@
 # **若い者向け留学体験共有Forum**
 
 <div className="flex justify-center">
-    <img src={"/project/dreamhacker/pc.png"} width="70%" />
+    <img src={"/project/dreamhacker/6.png"} width="70%" />
 </div>
 
 ベトナムの専門職業人のため、国内的なオンラインおよびオフラインコンミュウにティプラットフォームを建築しており、個人的および職業上の目標を達成することを支援し、メンバー間の長期的な信頼を育てることをもく目的としています。
